[CLS] Corrects a number of findbugs and checkstyle concerns